--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,9 @@
             ],
             "@data/*": [
                 "src/data/*"
+            ],
+            "@hooks/*": [
+                "src/hooks/*"
             ]
         }
     }
