--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.6.6",
+        "fuse.js": "^6.6.2",
         "graphql": "^16.5.0",
         "next": "12.1.6",
         "react": "18.1.0",
